crates/analyzer/tests/snapshots/errors__duplicate_generic_params.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: duplicate generic parameter
   ┌─ compile_errors/duplicate_generic_params.fe:10:10
   │
10 │   fn foo<T: Computable, T: Computable2>(val1: T, val2: T) {
   │          ^              - `T` redefined here
   │          │               
   │          `T` first defined here


